Fix meteor animation and z-index

--- a/src/components/Background.module.scss
+++ b/src/components/Background.module.scss
@@ -5,7 +5,6 @@
   overflow: hidden;
   animation-direction: alternate;
   animation-iteration-count: infinite;
-  z-index: 0;
   filter: blur(0.5px);
 }
 
@@ -69,98 +68,59 @@
 }
 
 .meteor {
-  position: relative;
-  width: 3px;
-  height: 3px;
-  border-radius: 50%;
-  background-color: white;
-  box-shadow: 0 0 7px 2px rgb(255, 255, 255, 0.3);
-}
-
-.meteor::after {
   position: absolute;
-  height: 2px;
-  background: linear-gradient(to left, #fff0, #eee);
-  border-radius: 0 0 50%;
-  content: "";
-  transform: rotateZ(-45deg);
+  top: -10px;
+  width: 2px;
+  height: 80px;
+  background: linear-gradient(45deg, white, rgba(255, 255, 255, 0));
+  transform: rotate(45deg);
+  animation: meteor 3s ease-in-out infinite;
 }
 
 .position {
   &1 {
-    left: -260px;
-    animation: meteor 3.5s infinite;
+    left: 105%;
+    animation-duration: 5.5s;
+    animation-delay: 3.5s;
   }
 
   &2 {
-    left: 810px;
-    animation: meteor 4.5s infinite;
-  }
-
-  &3 {
-    left: 200px;
-    animation: meteor 5.5s infinite;
-  }
-
-  &4 {
-    left: 570px;
-    animation: meteor 5s infinite;
-  }
-}
-
-.position {
-  &1::after {
-    left: -15px;
-    top: -38px;
-    width: 110px;
-  }
-
-  &2::after {
-    left: -10px;
-    top: -28px;
-    width: 80px;
-  }
-
-  &3::after {
-    left: -9px;
-    top: -24px;
-    width: 70px;
-  }
-
-  &4::after {
-    left: -10px;
-    top: -28px;
-    width: 80px;
+    left: 50%;
+    animation-duration: 5s;
+    animation-delay: 2s;
   }
 }
 
 @keyframes meteor {
   0% {
-    top: -10vh;
-    transform: translateX(0px);
+    transform: translateX(0) translateY(0) rotate(45deg);
+    opacity: 0;
   }
+
+  50% {
+    opacity: 1;
+  }
+  
   100% {
-    top: 110vh;
-    transform: translateX(-120vh);
+    transform: translateX(-1200px) translateY(1200px) rotate(45deg);
+    opacity: 0;
   }
 }
 
-.mobileMeteor {
-  display: none;
+@media (max-width: 1024px) {
+  .position {
+    &1 {
+      left: 190%;
+    }
+  
+    &2 {
+      left: 70%;
+    }
+  }
 }
 
 @media (max-width: 480px) {
-  .mobileMeteor {
-    display: block;
-  }
-
-  .position {
-    &2 {
-      will-change: transform;
-    }
-  
-    &3 {
-      will-change: transform;
-    }
+  .meteor {
+    will-change: transform, opacity;
   }
 }
